# hegre-downloader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
hegre-downloader/: configuration.py  downloader.py  exceptions.py  gallery.py  hegre.py  hegre_json_encoder.py  helper.py  movie.py  movie_type.py  object_type.py  renamer.py  sort_option.py
hegre-downloader/model/: gallery.py  hegre_object.py  model.py  movie.py  object_type.py
hegre-downloader/tests/: test_helper.py
hegre-downloader/tests/model/: test_hegre_object.py
src/hegre_downloader/: configuration.py  downloader.py  hegre.py  hegre_json_encoder.py  sort_option.py
src/hegre_downloader/model/: gallery.py  hegre_object.py  movie.py
tests/: capture_website.py  test_helper.py
tests/model/: test_hegre_object.py  test_movie.py
